cluster/manifests/arr/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: radarr
        image: linuxserver/radarr:5.27.1-nightly
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: radarr-config-storage
          mountPath: /config
        - name: radarr-config
          mountPath: /config/config.xml
          subPath: config.xml
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: radarr-config
        configMap:
          name: radarr-config
          defaultMode: 0644
      - name: radarr-config-storage
        persistentVolumeClaim:
          claimName: radarr-config-storage
