cluster/manifests/arr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
